# CG

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGLCh1.md  OpenGLCh2.md  OpenGLCh3.md  OpenGLCh4.md  OpenGLCh5.md  README.md  TODO.md  Useful.md
book_summary/: ch1.md  ch2.md  light.md
cg-frameworks-main/: INSTALL.md
cg-frameworks-main/opengl_0/src/: CMakeLists.txt  mainview.cpp  mainview.h
cg-frameworks-main/opengl_0/src/shaders/: fragshader.glsl  vertshader.glsl
cg-frameworks-main/opengl_1/src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  myvertex.h  userinput.cpp  vertex.h
cg-frameworks-main/opengl_1/src/shaders/: vertshader.glsl
cg-frameworks-main/raytracer_1/: CMakeLists.txt
cg-frameworks-main/raytracer_1/src/: light.h  main.cpp  material.h  object.h  objloader.cpp  objloader.h  raytracer.cpp  scene.cpp  scene.h  triple.cpp  triple.h
cg-frameworks-main/raytracer_1/src/shapes/: cylinder.cpp  cylinder.h  mesh.cpp  mesh.h  quad.cpp  quad.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/: main.cpp
